--- a/counterparty-core-original/docker-compose.yml
+++ b/counterparty-core-original/docker-compose.yml
@@ -6,7 +6,9 @@ x-bitcoind-common: &bitcoind-common
   restart: unless-stopped
 
 x-counterparty-common: &counterparty-common
-  image: counterparty/counterparty:v11.0.3
+  build:
+    context: .
+    dockerfile: Dockerfile
   stop_grace_period: 1m
   volumes:
     - data:/root/.bitcoin
